--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             
             <ul class="list" id="navlinks">
                 <i class="fa fa-times" onclick="hidemenu()"></i>
-                <li><a href="">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="">ABOUT</a></li>
                 <li><a href="">COURSE</a></li>
-                <li><a href="">BLOG</a></li>
+                <li><a href="blog/blog.html">BLOG</a></li>
                 <li><a href="">CONTACT</a></li>
                 <li><a href="">ENROLL NOW</a></li>
             </ul>
